fix: support editorial semantic parity